--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,11 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8000",
+            "port":9222, 
+            "runtimeExecutable": "/usr/bin/chromium",
+            "url": "http://localhost:5500",
             "webRoot": "${workspaceFolder}"
+            
         }
     ]
 }
